// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Input it should match the snapshot [default] 1`] = `
.c0 {
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background: white;
  height: 2rem;
  line-height: 2rem;
  padding: 0 0.5rem;
  border: 1px solid #ced4da;
  border-radius: 3px;
}

.c0::-webkit-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::-moz-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-ms-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-moz-read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

.c0:read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`Components: Input it should match the snapshot [hasError] 1`] = `
.c0 {
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background: white;
  height: 2rem;
  line-height: 2rem;
  padding: 0 0.5rem;
  border: 1px solid #ced4da;
  border-radius: 3px;
  border-color: #dc3545;
}

.c0::-webkit-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::-moz-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-ms-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-moz-read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

.c0:read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`Components: Input it should match the snapshot [readonly] 1`] = `
.c0 {
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background: white;
  height: 2rem;
  line-height: 2rem;
  padding: 0 0.5rem;
  border: 1px solid #ced4da;
  border-radius: 3px;
}

.c0::-webkit-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::-moz-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-ms-input-placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0::placeholder {
  color: #c8c8c8;
  font-size: 0.9rem;
}

.c0:-moz-read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

.c0:read-only {
  color: #495057;
  background: #e9ecef;
  border-color: #ced4da;
}

<input
  className="c0"
  readOnly={true}
  type="text"
/>
`;
